done 70%